[feat][#75] Implement architecture fixes